# gbc_simplified

./: .gitignore  LICENSE  README.md  gbc_quicksave.py  gbc_workbench.py  gbdt.ipynb  gradient_boosting_multiclass.py  mypy.ini  pyproject.toml
src/: GBDT_from_scratch.ipynb
