[tool.poetry]
name = "test-pr"
version = "0.1.0"
description = ""
authors = ["stehles <sven.stehle@boehringer-ingelheim.com>"]

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
ipykernel = "^6.13.0"
matplotlib = "^3.5.2"
statsmodels = "^0.13.2"
scipy = "^1.8.0"
seaborn = "^0.11.2"
Jinja2 = "^3.1.2"
scikit-learn = "^1.1.1"
yapf = "^0.32.0"
cvxopt = "^1.3.0"
toml = "^0.10.2"

[tool.poetry.dev-dependencies]
mypy = "^0.950"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
